--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body{
   background-color: #98e0e3;
 }
+html {
+  scroll-behavior: smooth;
+}
+h1{
+  text-align: center;
+  padding: 10px;
+}
+.row{
+  text-align: center;
+}
+#slay{
+  padding-top: 2000px;
+  text-align: center;
+}
