--- a/style.css
+++ b/style.css
@@ -45,3 +45,11 @@ h1{
   width: 640px;
   height:360px;
 }
+.pages{
+  font-size: 20px;
+}
+.pagetext{
+  text-decoration: none;
+  color: black;
+  padding: 5px;
+}
